--- a/style.css
+++ b/style.css
@@ -124,6 +124,31 @@ a {
 
 /* Section 3 */ 
 
+.section-3 {
+    display:flex;
+    background-color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+    font-family:Roboto;
+}
 
+.quote-container {
+    width: auto;
+    height: auto;
+    padding: 100px 300px;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
 
+.quote {
+    font-size: 36px;
+    font-style: italic;
+}
 
+.quote-author{
+    display:flex;
+    align-self: flex-end;
+    font-size: 36px;
+    font-weight: bold;
+}
